--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core:
   firebase_database:
   firebase_auth:
+  cloud_firestore:
   google_sign_in:
   github_sign_in:
   get:
