--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,24 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Lucidasans
+      fonts:
+        - asset: fonts/lucidasans/LucidaSansRegular.ttf
+        - asset: fonts/lucidasans/LucidaSansItalic.ttf
+          style: italic
+        - asset: fonts/lucidasans/lucidasanshalbfettkursiv.ttf
+          weight: 600
+        - asset: fonts/lucidasans/lucidasansdemibold.ttf
+          weight: 700
+    - family: Comicsans
+      fonts:
+        - asset: fonts/comicsans/comici.ttf
+        - asset: fonts/comicsans/comici.ttf
+          style: italic
+        - asset: fonts/comicsans/comicz.ttf
+          weight: 700
+        - asset: fonts/comicsans/design.graffiti.comicsansms.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -76,6 +94,6 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
